Prepared initial design

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css" />
+    <script defer src="script.js"></script>
     <title>Country Project</title>
   </head>
   <body>
@@ -32,7 +33,7 @@
         </form>
         <div class="countries-container">
           <div class="country">
-            <img class="country__img" src="img/poland.png" alt="Country image" />
+              <img class="country__img" src="img/poland.png" alt="Country image" />
             <p class="country__name heading-2">Poland</p>
             <div class="country__info-container">
               <p class="country__info">Capital: Warsaw</p>
@@ -45,10 +46,10 @@
           </div>
         </div>
       </main>
-      <div class="modal">
+      <div class="modal hidden">
         <button class="btn modal__btn">x</button>
       </div>
-      <div class="overlay"></div>
+      <div class="overlay hidden"></div>
       <footer class="footer">&copy; Created by Patryk Grodoń in 2021.</footer>
     </div>
   </body>
