--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/main.css" />
     <script defer src="script.js"></script>
     <title>Country Project</title>
@@ -32,7 +35,7 @@
           <button class="btn form__btn">Display country</button>
         </form>
         <div class="countries-container">
-          <div class="country">
+          <!-- <div class="country">
               <img class="country__img" src="img/poland.png" alt="Country image" />
             <p class="country__name heading-2">Poland</p>
             <div class="country__info-container">
@@ -43,7 +46,7 @@
             </div>
             <p class="country__map">Show on map</p>
             <p class="country__neighbours">Neighbours</p>
-          </div>
+          </div> -->
         </div>
       </main>
       <div class="modal hidden">
