Added functionality which gives information about country you're in

--- a/index.html
+++ b/index.html
@@ -36,8 +36,14 @@
         </form>
         <div class="countries-container">
           <!-- <div class="country">
-              <img class="country__img" src="img/poland.png" alt="Country image" />
-            <p class="country__name heading-2">Poland</p>
+            <img
+              class="country__img"
+              src="img/poland.png"
+              alt="Country image"
+            />
+            <p class="country__name heading-2">
+              United States of America and friends
+            </p>
             <div class="country__info-container">
               <p class="country__info">Capital: Warsaw</p>
               <p class="country__info">Language: Polish</p>
