--- a/index.html
+++ b/index.html
@@ -35,15 +35,13 @@
           <button class="btn form__btn">Display country</button>
         </form>
         <div class="countries-container">
-          <!-- <div class="country">
+          <!-- <div class="country" data-alpha2code="PL">
             <img
               class="country__img"
               src="img/poland.png"
               alt="Country image"
             />
-            <p class="country__name heading-2">
-              United States of America and friends
-            </p>
+            <p class="country__name heading-2">Poland</p>
             <div class="country__info-container">
               <p class="country__info">Capital: Warsaw</p>
               <p class="country__info">Language: Polish</p>
@@ -56,7 +54,7 @@
         </div>
       </main>
       <div class="modal hidden">
-        <button class="btn modal__btn">x</button>
+        <button class="btn modal__btn">&#10008;</button>
       </div>
       <div class="overlay hidden"></div>
       <footer class="footer">&copy; Created by Patryk Grodoń in 2021.</footer>
